--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -34,6 +34,7 @@
                             <input
                                 [type]="column.type" 
                                 [formControlName]="column.key | customPipe" 
+                                appEmptyDirective
                                 (change)="onChangeInput()">
                         </th>
                     }          
